--- a/public/locales/en/titlesandsubtitles.json
+++ b/public/locales/en/titlesandsubtitles.json
@@ -15,5 +15,6 @@
   "donein": "done in",
   "jobsaremade": "Our jobs are done in 48 hours or less!",
   "playlistyoutube": "Here you have a youtube playlist to take a look at our work!",
-  "jobs": "jobs"
+  "jobs": "jobs",
+  "disableadblock": "Please disable your adblocker to continue, we don't run ads in our page but adblockers can block some of our scripts. Reload the page once you did it:)"
 }
