--- a/public/locales/pt/titlesandsubtitles.json
+++ b/public/locales/pt/titlesandsubtitles.json
@@ -17,5 +17,6 @@
   "donein": "concluído em",
   "jobsaremade": "Os nossos trabalhos são concluídos em 48 horas ou menos!",
   "playlistyoutube": "Aqui tem uma playlist do YouTube para ver o nosso trabalho!",
-  "jobs": "trabalhos"
+  "jobs": "trabalhos",
+  "disableadblock": "Por favor, desative o seu bloqueador de anúncios para continuar, não executamos anúncios na nossa página, mas os bloqueadores de anúncios podem bloquear alguns dos nossos scripts. Recarregue a página assim que o fizer :)"
 }
