--- a/public/locales/es/form.json
+++ b/public/locales/es/form.json
@@ -1,6 +1,6 @@
 {
-  "songdetails": "Detalles de la Canción",
-  "youremail": "Tu Correo Electrónico",
+  "songdetails": "Canción",
+  "youremail": "Tu Email",
   "payment": "Pago",
   "allfilesrequired": "Todos los campos son obligatorios",
   "songname": "Nombre de la Canción",
