--- a/public/locales/pt/form.json
+++ b/public/locales/pt/form.json
@@ -1,6 +1,6 @@
 {
-  "songdetails": "Detalhes da Música",
-  "youremail": "O Seu Email",
+  "songdetails": "Música",
+  "youremail": "Email",
   "payment": "Pagamento",
   "allfilesrequired": "Todos os campos são obrigatórios",
   "songname": "Nome da Música",
