--- a/public/locales/en/form.json
+++ b/public/locales/en/form.json
@@ -1,4 +1,7 @@
 {
+  "chooseoption": "Choose an option",
+  "animatedimage": "Animated Image",
+  "fullanimatedvideo": "Full Animated Video",
   "songdetails": "Song Details",
   "youremail": "Email",
   "payment": "Payment",
