--- a/public/locales/es/form.json
+++ b/public/locales/es/form.json
@@ -1,4 +1,7 @@
 {
+  "chooseoption": "Elige una opción",
+  "animatedimage": "Imagen Animada",
+  "fullanimatedvideo": "Vídeo Animado Completo",
   "songdetails": "Canción",
   "youremail": "Tu Email",
   "payment": "Pago",
