--- a/public/locales/pt/form.json
+++ b/public/locales/pt/form.json
@@ -1,4 +1,7 @@
 {
+  "chooseoption": "Escolha uma opção",
+  "animatedimage": "Imagem Animada",
+  "fullanimatedvideo": "Vídeo Animado Completo",
   "songdetails": "Música",
   "youremail": "Email",
   "payment": "Pagamento",
