--- a/public/locales/en/titlesandsubtitles.json
+++ b/public/locales/en/titlesandsubtitles.json
@@ -16,5 +16,6 @@
   "jobsaremade": "Our jobs are done in 48 hours or less!",
   "playlistyoutube": "Here you have a youtube playlist to take a look at our work!",
   "jobs": "jobs",
-  "disableadblock": "Please disable your adblocker to continue, we don't run ads in our page but adblockers can block some of our scripts. Reload the page once you did it:)"
+  "disableadblock": "Please disable your adblocker to continue, we don't run ads in our page but adblockers can block some of our scripts. Reload the page once you did it:)",
+  "bothoptions": "(Both options include a youtube thumbnail and an instagram video to promote your song)"
 }
