--- a/public/locales/es/titlesandsubtitles.json
+++ b/public/locales/es/titlesandsubtitles.json
@@ -16,5 +16,6 @@
   "jobsaremade": "¡Nuestros trabajos se realizan en 48 horas o menos!",
   "playlistyoutube": "¡Aquí tienes una lista de reproducción de YouTube para ver nuestro trabajo!",
   "jobs": "trabajos",
-  "disableadblock": "Por favor, desactiva tu adblocker para continuar, no tenemos anuncios en nuestra página pero los adblockers pueden bloquear algunos de nuestros scripts. Recarga la página una vez que lo hayas hecho:)"
+  "disableadblock": "Por favor, desactiva tu adblocker para continuar, no tenemos anuncios en nuestra página pero los adblockers pueden bloquear algunos de nuestros scripts. Recarga la página una vez que lo hayas hecho:)",
+  "bothoptions": "(Ambas opciones incluyen una miniatura para youtube y un video para promover tu canción en instagram)"
 }
