--- a/public/locales/pt/titlesandsubtitles.json
+++ b/public/locales/pt/titlesandsubtitles.json
@@ -9,7 +9,6 @@
   "maindesc": "Desbloqueie o Potencial Total da Sua Música com Visualizações Geradas por IA",
   "mainkeywords": "Visualizadores de Música, Visualizações Geradas por IA, Aplicação de Visualização Musical, Visualização de Música com IA, Arte Visual para Música, Visualizações Criativas de Música, Skyder Visualizers, Aperfeiçoe a sua Música com IA, Visualize a sua Música com IA, Visualizações para Artistas, Experiência Musical Aprimorada com IA, Transforme a sua Música em Arte, Visualizações Cativantes, Fusão de Música e Arte Visual, Aplicação Skyder, Arte Visual para Músicos, Magia Visual com IA, Ferramentas de Aprimoramento Musical, Visualize as suas Canções, Arte Visual para Músicos",
   "title": "Conte-nos acerca da sua música, forneça-nos o seu endereço de email e a Skyder irá gerar o seu visualizador utilizando tecnologia de IA em menos de 48 horas!",
-
   "pickstyle": "Sabe o que quer? Escolha um estilo! (opcional)",
   "jobscompleted": "Mais de 50 trabalhos concluídos!",
   "latestcustomers": "Últimos Clientes",
@@ -18,5 +17,6 @@
   "jobsaremade": "Os nossos trabalhos são concluídos em 48 horas ou menos!",
   "playlistyoutube": "Aqui tem uma playlist do YouTube para ver o nosso trabalho!",
   "jobs": "trabalhos",
-  "disableadblock": "Por favor, desative o seu bloqueador de anúncios para continuar, não executamos anúncios na nossa página, mas os bloqueadores de anúncios podem bloquear alguns dos nossos scripts. Recarregue a página assim que o fizer :)"
+  "disableadblock": "Por favor, desative o seu bloqueador de anúncios para continuar, não executamos anúncios na nossa página, mas os bloqueadores de anúncios podem bloquear alguns dos nossos scripts. Recarregue a página assim que o fizer :)",
+  "bothoptions": "(Ambas opções incluem uma miniatura para o YouTube e um vídeo para promover a sua música no Instagram)"
 }
