--- a/public/locales/en/metadata.json
+++ b/public/locales/en/metadata.json
@@ -1,1 +1,3 @@
-{}
+{
+  "metadescription": "Explore cutting-edge AI-powered visualizers for artists! Enhance your creativity with our innovative tools designed to transform your art into mesmerizing visual experiences."
+}
