--- a/public/locales/es/metadata.json
+++ b/public/locales/es/metadata.json
@@ -1,1 +1,3 @@
-{}
+{
+  "metadescription": "¡Descubre visualizadores de vanguardia impulsados por inteligencia artificial para artistas! Mejora tu creatividad con nuestras innovadoras herramientas diseñadas para transformar tu arte en experiencias visuales fascinantes."
+}
