--- a/public/locales/pt/metadata.json
+++ b/public/locales/pt/metadata.json
@@ -1,1 +1,3 @@
-{}
+{
+  "metadescription": "Explore visualizadores de última geração impulsionados por inteligência artificial para artistas! Aumente a sua criatividade com as nossas ferramentas inovadoras projetadas para transformar a sua arte em experiências visuais fascinantes."
+}
